# lidc

./: README.md  pipeline.html  pyproject.toml
src/checks/: check_patches.py
src/datasets/: dataset.py
src/evaluation/: evaluate.py
src/models/: models.py
src/preprocessing/: match_raw.py  nodule_segment.py  nodule_size.py  npy_crop.py  parse_lidc_annotations.py
src/training/: engine.py  train.py
src/utils/: device.py  seed.py  utils.py  visualize.py
